--- a/STM32/StdPeriph/StdPeriphBlinker/StdPeriphBlinker.vcxproj
+++ b/STM32/StdPeriph/StdPeriphBlinker/StdPeriphBlinker.vcxproj
@@ -46,7 +46,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|VisualGDB'">
     <ClCompile>
-      <CLanguageStandard>C11</CLanguageStandard>
+      <CLanguageStandard>GNU11</CLanguageStandard>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
