Simple app that renders two sine waves with one constantly shifting phase.

--- a/STM32/StdPeriph/Nucleo/F446RE/SimpleBlinker/EmbeddedProject1/EmbeddedProject1.vcxproj.filters
+++ b/STM32/StdPeriph/Nucleo/F446RE/SimpleBlinker/EmbeddedProject1/EmbeddedProject1.vcxproj.filters
@@ -30,9 +30,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="LEDBlink.c">
-      <Filter>Source files</Filter>
-    </ClCompile>
     <ClCompile Include="system_stm32f4xx.c">
       <Filter>Source files</Filter>
     </ClCompile>
@@ -333,5 +330,8 @@
     <None Include="stm32.xml">
       <Filter>VisualGDB settings</Filter>
     </None>
+    <ClCompile Include="Phaser.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
