--- a/STM32/StdPeriph/Nucleo/F446RE/SimpleBlinker/EmbeddedProject1/EmbeddedProject1.vcxproj
+++ b/STM32/StdPeriph/Nucleo/F446RE/SimpleBlinker/EmbeddedProject1/EmbeddedProject1.vcxproj
@@ -55,7 +55,7 @@
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
   <ItemGroup>
-    <ClCompile Include="LEDBlink.c" />
+    <ClCompile Include="Phaser.c" />
     <ClCompile Include="system_stm32f4xx.c" />
     <None Include="stm32.props" />
     <ClCompile Include="$(BSP_ROOT)\STM32F4xxxx\StartupFiles\startup_stm32f446xx.c" />
