Rename the settings files.

--- a/STM32/StdPeriph/Nucleo/F446RE/Signals/Phaser/EmbeddedProject1.vcxproj.filters
+++ b/STM32/StdPeriph/Nucleo/F446RE/Signals/Phaser/EmbeddedProject1.vcxproj.filters
@@ -321,17 +321,19 @@
     <ClInclude Include="$(BSP_ROOT)\STM32F4xxxx\CMSIS_StdPeriph\RTOS\Template\cmsis_os.h">
       <Filter>Header files\Device-specific files\StdPeriph</Filter>
     </ClInclude>
-    <None Include="EmbeddedProject1-Debug.vgdbsettings">
-      <Filter>VisualGDB settings</Filter>
-    </None>
-    <None Include="EmbeddedProject1-Release.vgdbsettings">
-      <Filter>VisualGDB settings</Filter>
-    </None>
     <None Include="stm32.xml">
       <Filter>VisualGDB settings</Filter>
     </None>
     <ClCompile Include="Phaser.c">
       <Filter>Source files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Phaser-Debug.vgdbsettings">
+      <Filter>VisualGDB settings</Filter>
+    </None>
+    <None Include="Phaser-Release.vgdbsettings">
+      <Filter>VisualGDB settings</Filter>
+    </None>
   </ItemGroup>
 </Project>
