--- a/STM32/StdPeriph/Nucleo/F446RE/Signals/Phaser/EmbeddedProject1.vcxproj
+++ b/STM32/StdPeriph/Nucleo/F446RE/Signals/Phaser/EmbeddedProject1.vcxproj
@@ -154,8 +154,8 @@
     <ClInclude Include="$(BSP_ROOT)\STM32F4xxxx\CMSIS_StdPeriph\Include\core_sc000.h" />
     <ClInclude Include="$(BSP_ROOT)\STM32F4xxxx\CMSIS_StdPeriph\Include\core_sc300.h" />
     <ClInclude Include="$(BSP_ROOT)\STM32F4xxxx\CMSIS_StdPeriph\RTOS\Template\cmsis_os.h" />
-    <None Include="EmbeddedProject1-Debug.vgdbsettings" />
-    <None Include="EmbeddedProject1-Release.vgdbsettings" />
+    <None Include="Phaser-Debug.vgdbsettings" />
+    <None Include="Phaser-Release.vgdbsettings" />
     <None Include="stm32.xml" />
   </ItemGroup>
 </Project>
