--- a/STM32/StdPeriph/Nucleo/F446RE/Signals/Phaser/Phaser.vcxproj.filters
+++ b/STM32/StdPeriph/Nucleo/F446RE/Signals/Phaser/Phaser.vcxproj.filters
@@ -336,4 +336,9 @@
       <Filter>VisualGDB settings</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="peripherals.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
