--- a/STM32/STM32F446RE-NUCLEO/Cube2/Cube2.vcxproj.filters
+++ b/STM32/STM32F446RE-NUCLEO/Cube2/Cube2.vcxproj.filters
@@ -258,5 +258,13 @@
     <None Include="stm32.xml">
       <Filter>VisualGDB settings</Filter>
     </None>
+    <ClCompile Include="..\..\Utilities\SineTables.c">
+      <Filter>Source files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\Utilities\SineTables.h">
+      <Filter>Header files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
