--- a/STM32/STM32F446RE-NUCLEO/DMASineWaves/DMASineWaves.vcxproj.filters
+++ b/STM32/STM32F446RE-NUCLEO/DMASineWaves/DMASineWaves.vcxproj.filters
@@ -257,8 +257,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Cube2-Debug.vgdbsettings" />
-    <None Include="Cube2-Release.vgdbsettings" />
+    <None Include="DMASineWaves-Debug.vgdbsettings" />
+    <None Include="DMASineWaves-Release.vgdbsettings" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Utilities\SineTables.h">
